<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.familiapaiva.neotechapp.MainActivity">

    <EditText
        android:id="@+id/campo_orcamento_inicial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/valorOrcamentoInicial"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginBottom="5dp"
        android:inputType="number" />

    <EditText
        android:id="@+id/campo_margem_lucro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/margemLucro"
        android:textAlignment="center"
        android:layout_margin="5dp"
        android:inputType="number" />

    <EditText
        android:id="@+id/campo_taxa_tributaria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/taxaTributaria"
        android:textAlignment="center"
        android:layout_margin="5dp"
        android:inputType="number" />

    <Button
        android:id="@+id/btn_calcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:textColor="#FFFFFF"
        android:layout_margin="5dp"
        android:text="@string/calcular"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/resultados"
        android:textAlignment="center"
        android:textSize="25dp"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/valorLucro"
        android:textAlignment="center"
        android:layout_margin="5dp"/>
    <TextView
        android:id="@+id/campo_valor_lucro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_margin="5dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/valorTributos"
        android:textAlignment="center"
        android:layout_margin="5dp" />
    <TextView
        android:id="@+id/campo_valor_tributos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_margin="5dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/valorFinalOrcamento"
        android:textAlignment="center"
        android:layout_margin="5dp" />
    <TextView
        android:id="@+id/campo_valor_final_orcamento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_margin="5dp"/>

</LinearLayout>
